--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,6 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_currentweather">Current Weather</string>
-    <string name="menu_gallery">Gallery</string>
+    <string name="menu_longtermforecast">Long Term Forecast</string>
     <string name="menu_slideshow">Slideshow</string>
 </resources>
